--- a/CalculatorApp/app/src/main/res/values/colors.xml
+++ b/CalculatorApp/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#3D3D3D</color>
+    <color name="button_color">#3D3D3D</color>
+    <color name="equal_to">#444444</color>
 </resources>
