- Added values to the string resources - Make colors compatible with system design

--- a/CalculatorApp/app/src/main/res/layout/single_pinned_currency_view.xml
+++ b/CalculatorApp/app/src/main/res/layout/single_pinned_currency_view.xml
@@ -8,12 +8,12 @@
         android:id="@+id/button_first_conversion"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@color/equal_to"
         app:cornerRadius="50dp"
-        android:text="GBP/EUR"
+        android:text="@string/pinned_currency_sample"
         android:fontFamily="@font/montserrat"
-        android:textColor="#ffff"
+        android:textColor="?attr/colorOnPrimary"
         android:textSize="12sp"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"/>
