--- a/CalculatorApp/app/src/main/res/drawable/equal_button.xml
+++ b/CalculatorApp/app/src/main/res/drawable/equal_button.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/equal_to"/>
+            <solid android:color="?attr/colorSecondaryVariant"/>
             <corners android:radius="40dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/equal_to"/>
+            <solid android:color="?attr/colorSecondaryVariant"/>
             <corners android:radius="40dp"/>
         </shape>
     </item>
