--- a/CalculatorApp/app/src/main/res/drawable/pinned_widget_background.xml
+++ b/CalculatorApp/app/src/main/res/drawable/pinned_widget_background.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="?android:attr/textColor"/>
-            <corners android:radius="300dp"/>
+            <solid android:color="@color/pinned_currency_background"/>
+            <corners android:radius="50dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorSecondaryVariant"/>
-            <corners android:radius="300dp"/>
+            <solid android:color="@color/pinned_currency_background"/>
+            <corners android:radius="50dp"/>
         </shape>
     </item>
 </selector>
