--- a/CalculatorApp/app/src/main/res/values/preloaded_fonts.xml
+++ b/CalculatorApp/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,7 @@
         <item>@font/montserrat</item>
         <item>@font/montserrat_bold</item>
         <item>@font/montserrat_medium</item>
+        <item>@font/montserrat_semibold</item>
+        <item>@font/roboto_bold</item>
     </array>
 </resources>
