--- a/CalculatorApp/app/src/main/res/values/themes.xml
+++ b/CalculatorApp/app/src/main/res/values/themes.xml
@@ -3,7 +3,14 @@
     <style name="Base.Theme.CalyxCalculator" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:colorBackground">@color/colorBackgroundLight</item>
+        <item name="android:textColor">@color/textColorLight</item>
+        <item name="colorPrimary">?android:attr/colorBackground</item>
+        <item name="colorOnPrimary">?android:attr/textColor</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSurface">@color/colorSurfaceLight</item>
+        <item name="colorSecondaryVariant">@color/colorSurfaceVariantLight</item>
+        <item name="android:colorAccent">@color/colorAccentLight</item>
     </style>
 
     <style name="Theme.CalyxCalculator" parent="Base.Theme.CalyxCalculator" />
